# agentic-proto

./: .gitignore  README.md  pyproject.toml
data/raw/sectors/: Daftar Saham  - Basic Materials - 20250525.xlsx  Daftar Saham  - Consumer Cyclicals - 20250525.xlsx  Daftar Saham  - Consumer Non-Cyclicals - 20250525.xlsx  Daftar Saham  - Energy - 20250525.xlsx  Daftar Saham  - Financials - 20250525.xlsx  Daftar Saham  - Healthcare - 20250525.xlsx  Daftar Saham  - Industrials - 20250525.xlsx  Daftar Saham  - Infrastructures - 20250525.xlsx  Daftar Saham  - Properties & Real Estate - 20250525.xlsx  Daftar Saham  - Technology - 20250525.xlsx  Daftar Saham  - Transportation & Logistic - 20250525.xlsx  README.md
