[project]
name = "agentic-proto"
version = "0.1.0"
description = "Prototype for an Agentic AI case"
authors = [
    { name="Yoiq S Rambadian", email="yoiqrambadian@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = [
    "packages/database",
]

[tool.uv.sources]
database = { workspace = true }
