[project]
name = "agentic-proto"
version = "0.1.0"
description = "Prototype for an Agentic AI case"
authors = [
    { name="Yoiq S Rambadian", email="yoiqrambadian@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.121.1",
    "crewai-tools>=0.46.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = [
    "packages/agent",
    "packages/database",
    "packages/pipeline",
]

[tool.uv.sources]
agent = { workspace = true }
database = { workspace = true }
pipeline = { workspace = true }
